refactor the logged in user serialization
