# app/src/main/java/com/tuvarna/geo/config/openapi.yaml
@@ -55,19 +55,19 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/RestApiResponseVoid'
+                $ref: '#/components/schemas/RestApiResponseLoggedInUserDTO'
         "500":
           description: Internal server error
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/RestApiResponseVoid'
+                $ref: '#/components/schemas/RestApiResponseLoggedInUserDTO'
         "201":
           description: User logged in successfully
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/RestApiResponseVoid'
+                $ref: '#/components/schemas/RestApiResponseLoggedInUserDTO'
 components:
   schemas:
     RegisterUserDTO:
@@ -100,3 +100,25 @@ components:
           type: string
         password:
           type: string
+    LoggedInUserDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        username:
+          type: string
+        userType:
+          type: string
+        email:
+          type: string
+    RestApiResponseLoggedInUserDTO:
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/LoggedInUserDTO'
+        message:
+          type: string
+        status:
+          type: integer
+          format: int32
