# app/src/main/java/com/tuvarna/geo/rest_api/models/LoggedInUserDTO.kt
@@ -1,0 +1,47 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.tuvarna.geo.rest_api.models
+
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ * 
+ *
+ * @param id 
+ * @param username 
+ * @param userType 
+ * @param email 
+ */
+
+
+data class LoggedInUserDTO (
+
+    @Json(name = "id")
+    val id: kotlin.Int? = null,
+
+    @Json(name = "username")
+    val username: kotlin.String? = null,
+
+    @Json(name = "userType")
+    val userType: kotlin.String? = null,
+
+    @Json(name = "email")
+    val email: kotlin.String? = null
+
+)
+
