# app/src/main/java/com/tuvarna/geo/rest_api/models/RestApiResponseLoggedInUserDTO.kt
@@ -1,0 +1,44 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.tuvarna.geo.rest_api.models
+
+import com.tuvarna.geo.rest_api.models.LoggedInUserDTO
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ * 
+ *
+ * @param `data` 
+ * @param message 
+ * @param status 
+ */
+
+
+data class RestApiResponseLoggedInUserDTO (
+
+    @Json(name = "data")
+    val `data`: LoggedInUserDTO? = null,
+
+    @Json(name = "message")
+    val message: kotlin.String? = null,
+
+    @Json(name = "status")
+    val status: kotlin.Int? = null
+
+)
+
