# app/src/main/java/com/tuvarna/geo/rest_api/models/UserType.kt
@@ -1,0 +1,39 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.tuvarna.geo.rest_api.models
+
+
+import com.squareup.moshi.Json
+import com.squareup.moshi.JsonClass
+
+/**
+ * 
+ *
+ * @param id 
+ * @param type 
+ */
+
+
+data class UserType (
+
+    @Json(name = "id")
+    val id: kotlin.Int? = null,
+
+    @Json(name = "type")
+    val type: kotlin.String? = null
+
+)
+
