# app/src/main/java/com/tuvarna/geo/viewmodel/RegisterViewModel.kt
@@ -3,9 +3,8 @@ package com.tuvarna.geo.viewmodel
 import androidx.lifecycle.ViewModel
 import androidx.lifecycle.viewModelScope
 import com.tuvarna.geo.controller.ApiResult
-import com.tuvarna.geo.entity.User
+import com.tuvarna.geo.entity.EntityUser
 import com.tuvarna.geo.repository.UserRepository
-import com.tuvarna.geo.viewmodel.ui.UiState
 import dagger.hilt.android.lifecycle.HiltViewModel
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.StateFlow
@@ -17,20 +16,15 @@ import javax.inject.Inject
 class RegisterViewModel @Inject constructor(private val userRepository: UserRepository) :
   ViewModel() {
 
-  private val _uiState = MutableStateFlow<UiState>(UiState.Empty)
-  val uiState: StateFlow<UiState> = _uiState
+  private val _uiState = MutableStateFlow<ApiResult<Nothing>>(ApiResult.Empty)
+  val uiState: StateFlow<ApiResult<Nothing>> = _uiState
 
-  fun register(user: User, userType: String) {
-    Timber.d("User %s clicked the registration button! Moving on...", user)
+  fun register(user: EntityUser, userType: String) {
+    Timber.d("EntityUser %s clicked the registration button! Moving on...", user)
     viewModelScope.launch {
-      _uiState.value = UiState.Loading
+      _uiState.value = ApiResult.Loading
       val result = userRepository.register(user, userType)
-      _uiState.value =
-        when (result) {
-          is ApiResult.Success -> UiState.Success(result.message)
-          is ApiResult.Error ->
-            UiState.Error(result.exception.message ?: "An unknown error occurred")
-        }
+      _uiState.value = result
     }
   }
 }
